--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -169,6 +169,9 @@
               {%- if section.settings.newsletter_heading != blank -%}
                 <h2 class="footer-block__heading inline-richtext">{{ section.settings.newsletter_heading }}</h2>
               {%- endif -%}
+              {%- if section.settings.newsletter_subtitle != blank -%}
+               <p class="newsletter-text">{{ section.settings.newsletter_subtitle }}</p>
+              {%- endif -%}
               {%- form 'customer', id: 'ContactFooter', class: 'footer__newsletter newsletter-form' -%}
                 <input type="hidden" name="contact[tags]" value="newsletter">
                 <div class="newsletter-form__field-wrapper">
@@ -502,6 +505,12 @@
       "id": "newsletter_heading",
       "default": "Subscribe to our emails",
       "label": "t:sections.footer.settings.newsletter_heading.label"
+    },
+    {
+      "type": "text",
+      "id": "newsletter_subtitle",
+      "default": "Subscribe for store updates.",
+      "label": "newsletter subtitle"
     },
     {
       "type": "header",
