--- a/snippets/icon-cart-empty.liquid
+++ b/snippets/icon-cart-empty.liquid
@@ -1,4 +1,4 @@
-<svg
+{% comment  %}<svg
   class="icon icon-cart-empty"
   aria-hidden="true"
   focusable="false"
@@ -7,4 +7,9 @@
   fill="none"
 >
   <path d="m15.75 11.8h-3.16l-.77 11.6a5 5 0 0 0 4.99 5.34h7.38a5 5 0 0 0 4.99-5.33l-.78-11.61zm0 1h-2.22l-.71 10.67a4 4 0 0 0 3.99 4.27h7.38a4 4 0 0 0 4-4.27l-.72-10.67h-2.22v.63a4.75 4.75 0 1 1 -9.5 0zm8.5 0h-7.5v.63a3.75 3.75 0 1 0 7.5 0z" fill="currentColor" fill-rule="evenodd"/>
+</svg>{% endcomment %}
+<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M21.8362 23H2.16377C1.55152 23 1.08301 22.4548 1.17516 21.8495L3.58824 6H20.4118L22.8248 21.8495C22.917 22.4548 22.4485 23 21.8362 23Z" stroke="#FFF9EB" stroke-width="1.5"/>
+<path d="M7 9.41176C7 6.82353 8.61765 1 12.1765 1" stroke="#FFF9EB" stroke-width="1.5"/>
+<path d="M17.353 9.41176C17.353 6.82353 15.7354 1 12.1766 1" stroke="#FFF9EB" stroke-width="1.5"/>
 </svg>
