--- a/assets/a-style.css
+++ b/assets/a-style.css
@@ -90,6 +90,48 @@ Montas
     height: 100%;
     object-fit: cover;
 }
+#MainContent .shopify-section:first-child{
+    margin-top:-100px;
+}
+@media(max-width:767px){
+    #MainContent .shopify-section:first-child{
+        margin-top:-70px;
+    }
+}
+/***** header ****/
+sticky-header{
+    border-bottom: 2px solid var(--Cream, #FFF9EB);
+}
+.header__menu-item{
+    color:  #FFF9EB;
+    font-family: Cerebri Sans;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    padding:0;
+}
+.header__inline-menu ul{
+    gap:clamp(10px,2.222vw,32px);
+}
+.cart-count-bubble{
+    border:none;
+    background: transparent;
+}
+.cart-count-bubble  span{
+    color: #FFF9EB;
+    text-align: center;
+    font-family: Cerebri Sans;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+.cart-count-bubble{
+    bottom: 12px !important;
+    left: 14px !important;
+}
+/**** end header ***/
 /**** banner ****/
 
 .section-baner{
@@ -127,7 +169,20 @@ Montas
     font-weight: 400;
     line-height: 110%;
 }
-
+@media(max-width:767px){
+    .section-baner__wrap{
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .section-baner .title h1{
+        text-align: center;
+    }
+    .banner-btn{
+        display: flex;
+        justify-content: center;
+    }
+}
 @media (max-width:500px){
     .section-baner .title h1{
         text-align: center;
