--- a/snippets/icon-account.liquid
+++ b/snippets/icon-account.liquid
@@ -1,4 +1,4 @@
-<svg
+{% comment %}<svg
   xmlns="http://www.w3.org/2000/svg"
   aria-hidden="true"
   focusable="false"
@@ -7,4 +7,10 @@
   viewBox="0 0 18 19"
 >
   <path fill-rule="evenodd" clip-rule="evenodd" d="M6 4.5a3 3 0 116 0 3 3 0 01-6 0zm3-4a4 4 0 100 8 4 4 0 000-8zm5.58 12.15c1.12.82 1.83 2.24 1.91 4.85H1.51c.08-2.6.79-4.03 1.9-4.85C4.66 11.75 6.5 11.5 9 11.5s4.35.26 5.58 1.15zM9 10.5c-2.5 0-4.65.24-6.17 1.35C1.27 12.98.5 14.93.5 18v.5h17V18c0-3.07-.77-5.02-2.33-6.15-1.52-1.1-3.67-1.35-6.17-1.35z" fill="currentColor">
+</svg> {% endcomment %}
+
+<svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<circle cx="12.3231" cy="6.60507" r="5.85507" stroke="#FFF9EB" stroke-width="1.5"/>
+<path d="M9.02044 11.7949C5.16151 13.357 1.5437 17.5946 1.05575 22.0022C0.994985 22.5512 1.44476 23.0002 1.99704 23.0002C3.77196 23.0002 7.7278 23.0002 12.323 23.0002C16.9181 23.0002 20.874 23.0002 22.6489 23.0002C23.2012 23.0002 23.6505 22.5514 23.599 22.0015C23.1671 17.3942 19.8057 13.2025 15.6255 11.7949" stroke="#FFF9EB" stroke-width="1.5"/>
 </svg>
+
