--- a/snippets/header-drawer.liquid
+++ b/snippets/header-drawer.liquid
@@ -139,7 +139,7 @@
                 -%}
               </a>
             {%- endif -%}
-            {%- if localization.available_countries or localization.available_languages -%}
+            {%comment %}{%- if localization.available_countries or localization.available_languages -%}
               <div class="menu-drawer__localization header-localization">
                 {%- if localization.available_countries and localization.available_countries.size > 1 -%}
                   <noscript>
@@ -228,7 +228,7 @@
                   </localization-form>
                 {%- endif -%}
               </div>
-            {%- endif -%}
+            {%- endif -%}{% endcomment %}
             <ul class="list list-social list-unstyled" role="list">
               {%- if settings.social_twitter_link != blank -%}
                 <li class="list-social__item">
