icon-search display none

--- a/assets/a-style.css
+++ b/assets/a-style.css
@@ -99,6 +99,9 @@ Montas
     }
 }
 /***** header ****/
+.header__icon--search {
+    display: none;
+}
 sticky-header{
     border-bottom: 2px solid var(--Cream, #FFF9EB);
 }
