--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -293,7 +293,7 @@
           </localization-form>
         {%- endif -%}
       </div>
-      {% comment %}{% render 'header-search', input_id: 'Search-In-Modal' %} {% endcomment %}
+      {% render 'header-search', input_id: 'Search-In-Modal' %} 
 
       {%- if shop.customer_accounts_enabled -%}
         <a href="{%- if customer -%}{{ routes.account_url }}{%- else -%}{{ routes.account_login_url }}{%- endif -%}" class="header__icon header__icon--account link focus-inset{% if section.settings.menu != blank %} small-hide{% endif %}">
