update section product

--- a/sections/section-product.liquid
+++ b/sections/section-product.liquid
@@ -28,7 +28,7 @@
                                 <div class="icon-item">
                                     <div class="icon-item__wrap">
                                         <div class="icon-img">
-                                            <img src="{{block.settings.img| img_url: 'master'}}" alt="">
+                                            <img src="{{block.settings.img | img_url: 'master'}}" alt="">
                                         </div>
                                         <div class="icon-text">
                                             <p>
@@ -79,7 +79,7 @@
         },{
             "type": "richtext",
             "id": "text",
-            "label": "title"
+            "label": "text"
         }
   
       ],
