--- a/assets/a-style.css
+++ b/assets/a-style.css
@@ -315,6 +315,9 @@ sticky-header{
         line-height: normal;
         margin:0;
     }
+    .section-products .title  span{
+        font-style: italic;
+    }
     .section-products .text{
         margin-bottom:43px;
         max-width: 747px;
