--- a/sections/section-products.liquid
+++ b/sections/section-products.liquid
@@ -1,59 +1,94 @@
 <div class="section-products">
-    <div class="container">
-        <div class="section-products__wrap">
-            <div class="title">
-                <h2>
-                    {{section.settings.title}}
-                </h2>
-            </div>
-            <div class="text">
-                {{section.settings.text}}
-            </div>
-            <div class="products-list">
-                {% for block in section.blocks %}
-                    {%  assign product = block.settings.product  %}
-                    {% render 'my-product-card',
-                      product:product
-                    %}
-                {% endfor %}
-            </div>
-        </div>
+  <div class="container">
+    <div class="section-products__wrap">
+      <div class="title">
+        <h2>
+          {{ section.settings.title }}
+        </h2>
+      </div>
+      <div class="text">
+        {{ section.settings.text }}
+      </div>
+      <div class="products-list">
+        {% for block in section.blocks %}
+          {% assign product = block.settings.product %}
+          {% assign product_img = block.settings.img %}
+          {% assign product_img_shadow = block.settings.shadow %}
+          {% assign shadow_width = block.settings.shadow_max_width %}
+          {%  assign img_width =  block.settings.max_width_img%} 
+          {% render 'my-product-card'
+           , product: product,
+           img: product_img,
+           shadow: product_img_shadow,
+           shadow_width: shadow_width,
+           img_width:img_width,
+           %}
+        {% endfor %}
+      </div>
     </div>
+  </div>
 </div>
 
 {% schema %}
-    {
-      "name": "products list",
-      "settings": [
-        {
-          "type": "text",
-          "id": "title",
-          "label": "title"
-        },
-       {
-          "type": "richtext",
-          "id": "text",
-          "label": "text"
-        }
-  
-      ],
-      "blocks": [
-        {
-          "name": "product",
-          "type": "item",
-          "settings": [
-            {
-              "type": "product",
-              "id": "product",
-              "label": "product"
-            }
-          ]
-        }
-      ],
-      "presets": [
-        {
-          "name": "products list"
-        }
-      ]
-    }
-  {% endschema %}
+  {
+    "name": "products list",
+    "settings": [
+      {
+        "type": "text",
+        "id": "title",
+        "label": "title"
+      }, {
+        "type": "richtext",
+        "id": "text",
+        "label": "text"
+      }
+
+    ],
+    "blocks": [
+      {
+        "name": "product",
+        "type": "item",
+        "settings": [
+          {
+            "type": "product",
+            "id": "product",
+            "label": "product"
+          }, {
+            "type": "image_picker",
+            "id": "img",
+            "label": "product image"
+          }, {
+            "type": "image_picker",
+            "id": "shadow",
+            "label": "shadow image"
+          }, {
+            "type": "range",
+            "id": "shadow_max_width",
+            "min": 1,
+            "max": 100,
+            "step": 1,
+            "unit": "%",
+            "label": "shadow max width",
+            "default": 100
+
+          }, {
+            "type": "range",
+            "id": "max_width_img",
+            "min": 1,
+            "max": 100,
+            "step": 1,
+            "unit": "%",
+            "label": "image max width",
+            "default": 100
+
+          }
+        ]
+      }
+    ],
+    "presets": [
+      {
+        "name": "products list"
+      }
+    ]
+  }
+{% endschema %}
