--- a/assets/a-style.css
+++ b/assets/a-style.css
@@ -235,15 +235,35 @@ sticky-header{
     .my-product-card a{
         text-decoration: none;
     }
+    .my-product-card .product_img .product_img__body a{
+        display: flex;
+       
+        justify-content: center;
+        position: absolute;
+        top:0;
+        left:0;
+        right: 0;
+        bottom: 0;
+    }
     .my-product-card .product_img .product_img__body img{
         display:block;
         position: absolute;
         bottom: 0;
-        left:0;
+        left:50%;
+        transform: translateX(-50%);
         width: 100%;
         max-height: 100%;
-        object-fit: cover;
-        
+        object-fit: contain;
+        z-index: 1;
+    }
+    .shadow-img{
+        display:block;
+        position: absolute;
+        top:87%;
+        left:0 !important;
+        transform: rotate(-180deg) !important;
+        width:80%;
+        z-index: 0 !important;
     }
     .my-product-card .title{
         margin:0;
