--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -35,14 +35,15 @@
       >
         {% for recommendation in recommendations.products %}
           <li class="grid__item">
-            {% render 'card-product',
+            {% comment %} {% render 'card-product',
               card_product: recommendation,
               media_aspect_ratio: section.settings.image_ratio,
               image_shape: section.settings.image_shape,
               show_secondary_image: section.settings.show_secondary_image,
               show_vendor: section.settings.show_vendor,
               show_rating: section.settings.show_rating
-            %}
+            %} {% endcomment %}
+            {% render 'my-product-cart-hover-button', product: recommendation %}
           </li>
         {% endfor %}
       </ul>
