slider and reviews

--- a/sections/section-custom-slider.liquid
+++ b/sections/section-custom-slider.liquid
@@ -24,6 +24,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      height: auto !important;
       {% if section.settings.slide_max_height != 0 %}
         max-height: {{ section.settings.slide_max_height }}px;
       {% endif %}
