--- a/sections/section-banner-page.liquid
+++ b/sections/section-banner-page.liquid
@@ -36,6 +36,113 @@
     position: relative;
 
   }
+
+  .banner-page .container{
+    max-width: 2000px;
+    padding: 0;
+}
+.banner-page .banner-page__list{
+    display:flex;
+    flex-wrap:wrap;
+}
+.banner-page .banner-page__list .item{
+    width:50%;
+}
+.banner-page .banner-page__list .item-content .item__wrap{
+    padding:clamp(100px,11.458vw,165px) 0;
+    position: relative;
+}
+
+.banner-page .title{
+    position: absolute;
+    top: -3.5rem;
+    left:0;
+    width: 100%;
+    margin: 0;
+    z-index: 2;
+
+}
+.banner-page .title h2{
+    color: #FFF9EB;
+
+    text-align: center;
+    font-family: Calvino Grande Trial;
+    font-size: clamp(40px,7.639vw,110px);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; 
+    margin:0;
+}
+.banner-page .title h2 span{
+    font-style: italic;
+}
+.banner-page .banner-page__list .item-content .image{
+    position: relative;
+}
+.banner-page .banner-page__list .item-content .image__body{
+    display:flex;
+    justify-content: center;
+    position: relative;
+    align-items: center;
+    height: 100%;
+}
+.banner-page .banner-page__list .item-content img{
+    max-width: 54.723%;
+}
+.banner-page .banner-page__list .item-content{
+  
+}
+.banner-page .banner-page__list  img{
+    display:block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
+}
+.banner-page .item__wrap, .banner-page .image{
+    height: 100%;
+}
+.banner-page .item-btn{
+    position: absolute;
+    bottom:50px;
+    left:50%;
+    transform: translateX(-50%);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.banner-page .item-btn .a-btn{
+    border: 1px solid var(--Dark-Green, #3B4E15);
+    background: #FFF9EB;
+    height: 62px;
+    max-width: 276px;
+    width:100%;
+    justify-content: space-between;
+    padding:0 31px;
+    color: #3B4E15;
+    transition: all 0.4s ease-in-out;
+}
+.banner-page .item-btn .a-btn:hover{
+    color: #FFF9EB;
+    background:  #3B4E15;
+    transition: all 0.4s ease-in-out;
+}
+.banner-page .item-btn .a-btn:hover svg path{
+    fill:#FFF9EB;
+    transition: all 0.4s ease-in-out;
+}
+
+@media (max-width:767px){
+    .banner-page .banner-page__list .item{
+        width:100%;
+    }
+    .banner-page .banner-page__list::before{
+        content:none !important;
+    }
+    .banner-page .item-content{
+        padding-top:0 !important;
+    }
+}
   
 {% endstyle %}
 
