--- a/assets/a-style.css
+++ b/assets/a-style.css
@@ -63,7 +63,15 @@ Montas
     transition: all 0.4s ease-in-out;
 }
 
-
+p{
+  color: #4F5E3C;
+  font-family: Cerebri Sans;
+  font-size: var(--font-size-20);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 135%;
+  letter-spacing: 0.4px;
+}
 .container {
     max-width: 1440px;
     margin:0 auto;
