add padding section image list

--- a/sections/section-image-list.liquid
+++ b/sections/section-image-list.liquid
@@ -1,4 +1,7 @@
 {% style %}
+  .section-image-list-{{ section.id}}{
+    padding:50px 0;
+  }
   .section-image-list-{{ section.id}} .section-image-list__wrap {
     margin: 0 auto;
     max-width: {{ section.settings.max_width}}%;
