--- a/sections/section-product-rewiews.liquid
+++ b/sections/section-product-rewiews.liquid
@@ -1,3 +1,4 @@
+{{ 'reviews.css' | asset_url | stylesheet_tag }}
 <style>
     #shopify-section-{{ section.id }} {
         padding-top: {{ section.settings.padding_top }}px;
