--- a/assets/image-flip.css
+++ b/assets/image-flip.css
@@ -47,8 +47,12 @@
   }
   
   /* Do an horizontal flip when you move the mouse over the flip box container */
-  .flip-card:hover .flip-card-inner {
+  .is-flip .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
+  }
+  .no-flip .flip-card:hover .flip-card-back {
+    /* transition: all 0.3s ease; */
+    visibility: visible;
   }
   
   /* Position the front and back side */
@@ -56,6 +60,8 @@
     position: absolute;
     width: 100%;
     height: 100%;
+  }
+  .is-flip .flip-card-front, .flip-card-back {
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
   }
@@ -81,7 +87,12 @@
     justify-content: space-between;
     background-color: #4F5E3C;
     color: white;
+  }
+  .is-flip .flip-card-back {
     transform: rotateY(180deg);
+  }
+  .no-flip .flip-card-back {
+    visibility: hidden;
   }
   .flip-card-back h3 {
     flex: 3;
@@ -95,6 +106,7 @@
     text-transform: capitalize;
   }
   .flip-card-back p {
+    color: #fff9eb;
     flex: 1;
     font-family: Cerebri Sans;
     font-size: 13px;
