--- a/sections/section-full-image.liquid
+++ b/sections/section-full-image.liquid
@@ -1,16 +1,24 @@
 <style>
-    .full-image img{
-        display:block;
-        width:100%;
-        height: 100%;
-        object-fit: cover;
-        max-height: 662px;
-    }
+  .full-image img {
+      display:block;
+      width:100%;
+      height: 100%;
+      object-fit: cover;
+      max-height: 662px;
+  }
 </style>
-<div class="full-image">
+{% assign stl = '' %}
+{% if section.settings.padding_top != 0 %}
+  {{ stl | append: 'padding-top:' | append: section.settings.padding_top | append: 'px;' }}
+{% endif %}
+{% if section.settings.padding_bottom != 0 %}
+  {{ stl | append: 'padding-bottom:' | append: section.settings.padding_bottom | append: 'px;' }}
+{% endif %}
+
+<div class="full-image" style="{{ stl }}">
     <div class="container">
         <div class="full-image__wrap">
-            <img src="{{section.settings.img| img_url: 'master'}}" alt="">
+            <img src="{{ section.settings.img| img_url: 'master' }}" alt="">
         </div>
     </div>
 </div>
@@ -23,6 +31,26 @@
           "type": "image_picker",
           "id": "img",
           "label": "image"
+        },
+        {
+            "type": "range",
+            "id": "padding_top",
+            "label": "Paddind top",
+            "min": 0,
+            "max": 200,
+            "step": 2,
+            "unit": "px",
+            "default": 20
+        },
+        {
+            "type": "range",
+            "id": "padding_bottom",
+            "label": "Paddind bottom",
+            "min": 0,
+            "max": 200,
+            "step": 2,
+            "unit": "px",
+            "default": 20
         }
       ],
       "presets": [
