--- a/sections/section-text2.liquid
+++ b/sections/section-text2.liquid
@@ -66,7 +66,7 @@
                         "label": "Title"
                     },
                     {
-                        "type": "text",
+                        "type": "richtext",
                         "id": "text",
                         "label": "text"
                     }
