--- a/sections/section-custom-slider.liquid
+++ b/sections/section-custom-slider.liquid
@@ -1,55 +1,19 @@
+{{ 'custom-slider.css' | asset_url | stylesheet_tag }}
 <script src="{{ 'custom-slider.js' | asset_url }}" defer="defer"></script>
 <style>
-    #shopify-section-{{ section.id }} {
-        padding-top: {{ section.settings.padding_top }}px;
-        padding-bottom: {{ section.settings.padding_bottom }}px;
-        background-color: {{ section.settings.bg }};
-    }
-    #shopify-section-{{ section.id }} .custom-slider__title {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-    #shopify-section-{{ section.id }} .custom-slider__title p {
-      margin: 0;
-    }
-    #shopify-section-{{ section.id }} .swiper {
-      width: 100%;
-      height: 100%;
-    }
+#shopify-section-{{ section.id }} {
+    padding-top: {{ section.settings.padding_top }}px;
+    padding-bottom: {{ section.settings.padding_bottom }}px;
+    background-color: {{ section.settings.bg }};
+}
 
-    #shopify-section-{{ section.id }} .swiper-slide {
-      text-align: center;
-      font-size: 18px;
-      background: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: auto !important;
-      {% if section.settings.slide_max_height != 0 %}
-        max-height: {{ section.settings.slide_max_height }}px;
-      {% endif %}
-    }
-    #shopify-section-{{ section.id }} .swiper-slide img {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-    #shopify-section-{{ section.id }} .slide-title {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-    #shopify-section-{{ section.id }} .slide-title.title {
-        margin: 0;
-        color: #FFF;
-        font-family: Montas;
-        font-size: 30px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 1;
-    }
+#shopify-section-{{ section.id }} .swiper-slide {
+
+    {% if section.settings.slide_max_height != 0 %}
+    max-height: {{ section.settings.slide_max_height }}px;
+    {% endif %}
+}
+
   </style>
 
 <div class="custom-slider">
@@ -67,6 +31,11 @@
                     <img src="{{ block.settings.img | image_url: width: '200' }}" alt="">
                     {% if block.settings.title != blank %}
                         <h3 class="slide-title title">{{ block.settings.title }}</h3>
+                    {% endif %}
+                    {% if block.settings.text != blank %}                     
+                        <div class="slide-text">
+                            <div>{{ block.settings.text }}</div>
+                        </div>
                     {% endif %}
                 </div>
             {% endfor %}
@@ -156,6 +125,11 @@
                     "type": "text",
                     "id": "title",
                     "label": "Title"
+                },
+                {
+                    "type": "richtext",
+                    "id": "text",
+                    "label": "Text"
                 }
             ]
         }
